// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadcrumbItem > snapshots > default render 1`] = `
<div
  class="t-breadcrumb__item light"
  index="0"
>
  <span
    class="t-breadcrumb--text-overflow"
  >
    <span
      class="t-breadcrumb__inner"
      style="max-width: 120px;"
    >
      <!---->
      <span
        class="t-breadcrumb__inner-text"
      >
        
        页面1
        
      </span>
    </span>
  </span>
  <span
    class="t-breadcrumb__separator"
    style="text-overflow: clip;"
  >
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-right"
      >
        <path
          d="M9.5 17.5L15 12L9.5 6.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`BreadcrumbItem > snapshots > disabled item 1`] = `
<div
  class="t-breadcrumb__item light"
  index="0"
>
  <span
    class="t-breadcrumb--text-overflow t-is-disabled"
  >
    <span
      class="t-breadcrumb__inner"
      style="max-width: 120px;"
    >
      <!---->
      <span
        class="t-breadcrumb__inner-text"
      >
        
        页面1
        
      </span>
    </span>
  </span>
  <span
    class="t-breadcrumb__separator"
    style="text-overflow: clip;"
  >
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-right"
      >
        <path
          d="M9.5 17.5L15 12L9.5 6.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`BreadcrumbItem > snapshots > with href 1`] = `
<div
  class="t-breadcrumb"
>
  
  <div
    class="t-breadcrumb__item light"
    index="0"
  >
    <a
      class="t-breadcrumb--text-overflow t-link"
      href="https://www.tencent.com"
      target="_self"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        <!---->
        <span
          class="t-breadcrumb__inner-text"
        >
          
          页面1
          
        </span>
      </span>
    </a>
    <span
      class="t-breadcrumb__separator"
      style="text-overflow: clip;"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="chevron-right"
        >
          <path
            d="M9.5 17.5L15 12L9.5 6.5"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </span>
  </div>
  <div
    class="t-breadcrumb__item light"
    index="1"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        <!---->
        <span
          class="t-breadcrumb__inner-text"
        >
          
          页面2
          
        </span>
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
      style="text-overflow: clip;"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="chevron-right"
        >
          <path
            d="M9.5 17.5L15 12L9.5 6.5"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </span>
  </div>
  
</div>
`;

exports[`BreadcrumbItem > snapshots > with icon slot 1`] = `
<div
  class="t-breadcrumb__item light"
  index="0"
>
  <span
    class="t-breadcrumb--text-overflow"
  >
    <span
      class="t-breadcrumb__inner"
      style="max-width: 120px;"
    >
      <span
        class="test-icon"
      >
        icon
      </span>
      <span
        class="t-breadcrumb__inner-text"
      >
        
        页面1
        
      </span>
    </span>
  </span>
  <span
    class="t-breadcrumb__separator"
    style="text-overflow: clip;"
  >
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-right"
      >
        <path
          d="M9.5 17.5L15 12L9.5 6.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`BreadcrumbItem > snapshots > with to and router 1`] = `
<div
  class="t-breadcrumb__item light"
  index="0"
>
  <a
    class="t-breadcrumb--text-overflow t-link"
    href=""
    target="_self"
  >
    <span
      class="t-breadcrumb__inner"
      style="max-width: 120px;"
    >
      <!---->
      <span
        class="t-breadcrumb__inner-text"
      >
        
        页面1
        
      </span>
    </span>
  </a>
  <span
    class="t-breadcrumb__separator"
    style="text-overflow: clip;"
  >
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-right"
      >
        <path
          d="M9.5 17.5L15 12L9.5 6.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </span>
</div>
`;
